# memcrab-py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
examples/: tcp.py
memcrab/blocking/: __init__.py  connections.py  raw_client.py
memcrab/parsing/: __init__.py  aliases.py  parser.py  request.py  response.py  utils.py
tests/: test_.py  test_readme.py
